--- a/src/app/page.css
+++ b/src/app/page.css
@@ -169,3 +169,67 @@ main {
 .opticlear_image img {
   object-fit: cover;
 }
+
+/*  */
+/* arrivals */
+.arrivals_wrapper {
+  width: 100%;
+}
+
+.arrivals_grid {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  gap: 3rem;
+}
+
+.arrivals_item {
+  width: 100%;
+  aspect-ratio: 1;
+  /* height: 550px; */
+  position: relative;
+  font-weight: 600;
+}
+
+.arrivals_image_wrapper {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+.arrivals_image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: all 0.2s;
+}
+.arrivals_item:hover .arrivals_image {
+  transform: scale(1.1);
+}
+.arrivals_body {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+.arrivals_price {
+  color: var(--primary);
+}
+
+.arrivals_1 {
+  grid-area: 1 / 1 / 4 / 4;
+}
+.arrivals_2 {
+  grid-area: 1 / 4 / 3 / 6;
+}
+.arrivals_3 {
+  grid-area: 1 / 7 / 4 / 10;
+}
+.arrivals_4 {
+  grid-area: 3 / 4 / 7 / 7;
+}
+.arrivals_5 {
+  grid-area: 3 / 7 / 7 / 10;
+  align-content: end;
+}
