--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@ a,
 button {
   background: none;
   border: none;
+  font-family: inherit;
+  font-size: inherit;
   text-decoration: none;
   color: inherit;
 }
