--- a/src/app/app.css
+++ b/src/app/app.css
@@ -15,6 +15,11 @@ body {
   max-width: 1750px;
   margin: 0 auto;
 }
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 25vh;
+}
 
 .section-title {
   font-weight: 500;
@@ -25,4 +30,12 @@ body {
 
 .secondary-text {
   font-size: 2rem;
+}
+
+.main-title {
+  margin-bottom: 1.5rem;
+  margin-left: -0.2rem;
+  font-size: 3rem;
+  font-weight: 500;
+  color: var(--primary);
 }
