--- a/src/app/app.css
+++ b/src/app/app.css
@@ -39,3 +39,22 @@ body {
   font-weight: 500;
   color: var(--primary);
 }
+
+.section-link {
+  display: block;
+  position: relative;
+  margin-top: 1rem;
+  font-size: 1rem;
+  width: max-content;
+  color: var(--primary);
+  height: 1.825rem;
+}
+.section-link::before {
+  position: absolute;
+  bottom: 0rem;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: var(--primary);
+}
