--- a/src/app/app.css
+++ b/src/app/app.css
@@ -10,12 +10,24 @@ html {
 body {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  margin: auto;
 }
+.body-wrapper {
+  max-width: 1920px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  min-height: 100vh;
+}
+
 .container {
   max-width: 1750px;
   margin: 0 auto;
 }
 .main-wrapper {
+  width: 100%;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   gap: 25vh;
