--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,8 +11,8 @@
   justify-content: space-between;
   font-size: 1rem;
 }
-.active {
-  background: rgb(255, 255, 255);
+.scrolled {
+  background: rgba(255, 255, 255, 0.8);
   padding: 2rem 2rem;
 }
 
