--- a/src/app/Page.module.css
+++ b/src/app/Page.module.css
@@ -54,8 +54,8 @@
   padding: 5rem;
 }
 .banner_image {
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  aspect-ratio: 0.988;
   object-fit: cover;
 }
 
