--- a/src/app/Page.module.css
+++ b/src/app/Page.module.css
@@ -4,6 +4,7 @@
   padding-bottom: 3.5vh;
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .banner_item {
@@ -19,6 +20,22 @@
 }
 .banner_item:nth-child(1) {
   justify-content: center;
+}
+.banner_item:nth-child(2) {
+  align-items: center;
+  justify-content: center;
+}
+.banner_button {
+  max-width: max-content;
+  height: max-content;
+  font-size: 1.5rem;
+  background: rgba(0, 0, 0, 0.175);
+  color: var(--white);
+  padding: 1.5rem 5rem;
+  border: 2px solid rgba(255, 255, 255, 0.341);
+  border-radius: 1.5rem;
+  display: none;
+  margin-bottom: -50%;
 }
 .banner_text {
   height: 20px;
@@ -52,6 +69,7 @@
 }
 .banner_item:nth-child(1) {
   padding: 5rem;
+  z-index: 40;
 }
 .banner_image {
   width: 50%;
@@ -95,9 +113,15 @@
 .about_item {
   flex-basis: 50%;
   height: 600px;
+  padding-left: var(--spacer-large);
+}
+.about_item:nth-child(1) {
+  padding: 0;
 }
 .about_item:nth-child(2) {
-  padding: 7.5rem 0 7.5rem 7.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .about_image {
   position: relative;
@@ -147,7 +171,9 @@
   height: 700px;
 }
 .opticlear_item:nth-child(1) {
-  padding: 7.5rem 7.5rem 7.5rem 0;
+  padding-top: var(--spacer-large);
+  padding-right: var(--spacer-large);
+  padding-bottom: var(--spacer-large);
 }
 
 .opticlear_body {
@@ -159,9 +185,6 @@
   width: 100%;
   height: 100%;
   position: relative;
-}
-.opticlear_image img {
-  object-fit: cover;
 }
 
 /*  */
@@ -190,19 +213,145 @@
 .lenses_item:nth-child(1) {
   flex-direction: column;
   justify-content: center;
-  padding-right: 7.5rem;
+  padding-right: var(--spacer-large);
 }
 .lenses_item:nth-child(2) {
   display: flex;
 }
 .lenses_circle {
   position: relative;
-  width: 290px;
+  height: 135%;
   aspect-ratio: 1;
-  background: var(--primary);
   border-radius: 50%;
   overflow: hidden;
 }
 .lenses_circle {
   object-fit: cover;
+}
+
+/*  */
+/*  */
+/* media */
+@media (max-width: 1441px) {
+  .banner_item:nth-child(1) {
+    padding: 2rem;
+    font-size: 3.5rem;
+  }
+
+  /* opticlear */
+  .opticlear_item {
+    height: 550px;
+  }
+
+  /* lenses */
+  .lenses_circle {
+    height: 120%;
+  }
+}
+
+@media (max-width: 1025px) {
+  /* lenses */
+  .lenses_circle {
+    height: 100%;
+  }
+}
+
+@media (max-width: 821px) {
+  /* banner */
+  .banner_wrapper {
+    flex-wrap: wrap;
+    height: 100vh;
+    padding: 0;
+  }
+  .banner_item {
+    flex-basis: 100%;
+    width: 100%;
+    position: absolute;
+  }
+  .banner_item:nth-child(1) {
+    display: none;
+  }
+  .banner_button {
+    display: flex;
+  }
+
+  /* about */
+  .about_item {
+    height: 450px;
+  }
+
+  /* arrivals */
+  .arrivals_grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: row-reverse;
+    gap: 5%;
+  }
+
+  /* opticlear */
+  .opticlear_item {
+    height: 400px;
+  }
+
+  /* lenses */
+  .lenses_item {
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+  }
+  .lenses_circle {
+    height: 65%;
+  }
+}
+
+@media (max-width: 651px) {
+  .wrapper_item {
+    flex-basis: auto;
+    height: max-content;
+  }
+
+  /* about */
+  .about_wrapper {
+    flex-direction: column-reverse;
+  }
+  .about_item:nth-child(1) {
+    margin-bottom: 2rem;
+  }
+  .about_item:nth-child(1) {
+    height: 300px;
+  }
+
+  /* opticlear */
+  .opticlear_wrapper {
+    flex-direction: column;
+  }
+
+  .opticlear_item:nth-child(1) {
+    margin-bottom: 2rem;
+  }
+  .opticlear_item:nth-child(2) {
+    height: 300px;
+  }
+
+  /* lenses */
+  .lenses_wrapper {
+    flex-direction: column;
+  }
+  .lenses_circle {
+    max-height: 100px;
+  }
+  .lenses_item {
+    margin-bottom: 2rem;
+  }
+  .lenses_item:nth-child(2) {
+    flex-direction: row;
+    gap: 2rem;
+    height: 300px;
+  }
+}
+
+@media (max-width: 431px) {
+  .lenses_circle {
+    height: 60%;
+  }
 }
