--- a/src/app/app.css
+++ b/src/app/app.css
@@ -3,6 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --black: #121212;
+  --primary: #566a82;
+  --grey: #c1c1c1;
+  --white: #fff;
+  --spacer-large: 7rem;
+}
 
 html {
   scroll-behavior: smooth;
@@ -23,6 +30,7 @@ body {
 
 .container {
   max-width: 1750px;
+  padding: 0 20px;
   margin: 0 auto;
 }
 .main-wrapper {
@@ -59,7 +67,8 @@ body {
   font-size: 1rem;
   width: max-content;
   color: var(--primary);
-  height: 1.825rem;
+  padding: 0.5rem 1rem;
+  height: max-content;
 }
 .section-link::before {
   position: absolute;
@@ -75,4 +84,71 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+.bg-dark {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: var(--black);
+}
+
+/*  */
+/* media */
+@media (min-width: 1921px) {
+  html {
+    font-size: 22px;
+  }
+
+  .body-wrapper {
+    max-width: 100%;
+  }
+  .container {
+    max-width: 100%;
+    padding: 0 4%;
+  }
+}
+
+@media (max-width: 1441px) {
+  html {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1366px) {
+  :root {
+    --spacer-large: 5rem;
+  }
+}
+@media (max-width: 1141px) {
+  html {
+    font-size: 12px;
+  }
+  :root {
+    --spacer-large: 2rem;
+  }
+  .main-wrapper {
+    gap: 20vh;
+  }
+}
+
+@media (max-width: 821px) {
+  .section-link {
+    width: 100%;
+    text-align: center;
+    padding: 1rem;
+  }
+}
+
+@media (max-width: 601px) {
+  :root {
+    --spacer-large: 0;
+  }
+}
+
+@media (max-width: 541px) {
+  html {
+    font-size: 10px;
+  }
 }
