--- a/src/app/brand/brand.css
+++ b/src/app/brand/brand.css
@@ -10,7 +10,7 @@
 }
 
 .banner_item {
-  height: 920px;
+  height: 90vh;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -41,12 +41,6 @@
   margin-top: 1.5rem;
 }
 
-.banner_image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 /*  */
 /* story */
 .story_wrapper {
@@ -54,11 +48,11 @@
 }
 .story_inner {
   margin-top: 1.5rem;
-  width: 75%;
+  max-width: 80%;
   text-align: justify;
   display: flex;
   justify-content: space-between;
-  gap: 4rem;
+  gap: 2vw;
   flex-wrap: wrap;
 }
 .story_item {
@@ -72,7 +66,6 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  /* background-attachment: fixed; */
 }
 .story_image {
   object-fit: cover;
@@ -88,7 +81,8 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  gap: 4rem;
+  gap: 2vw;
+  position: relative;
 }
 .faqs_item {
   padding-top: 5rem;
@@ -178,4 +172,82 @@
 .q_body.active {
   height: max-content;
   margin-top: 1rem;
+}
+
+/*  */
+/* media */
+@media (max-width: 1920px) {
+  .story_inner {
+    max-width: 75%;
+  }
+}
+
+@media (max-width: 1441px) {
+  .banner_item:nth-child(1) {
+    padding: 2rem;
+  }
+
+  /* story */
+  .story_image_wrapper {
+    height: 300px;
+  }
+
+  /* faqs */
+  .faqs_image {
+    height: 700px;
+  }
+}
+
+@media (max-width: 1281px) {
+  .faqs_image {
+    height: 600px;
+  }
+}
+
+@media (max-width: 1025px) {
+  .faqs_image {
+    height: 500px;
+  }
+}
+
+@media (max-width: 821px) {
+  .banner_item:first-child {
+    display: none;
+  }
+  .banner_item:last-child {
+    flex-basis: 100%;
+    width: 100%;
+  }
+  .story_inner {
+    max-width: 90%;
+  }
+  .story_image_wrapper {
+    height: 250px;
+  }
+}
+
+@media (max-width: 651px) {
+  /* story */
+  .story_inner {
+    max-width: 100%;
+    flex-direction: column;
+    gap: 1vw;
+  }
+  .story_item {
+    width: 100%;
+    flex-basis: 100%;
+  }
+  .story_image_wrapper {
+  }
+
+  /* faqs */
+  .faqs_inner {
+    flex-direction: column;
+  }
+  .faqs_item {
+    padding-top: 0;
+  }
+  .faqs_image {
+    display: none;
+  }
 }
