--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
   padding: 2rem 1rem;
   z-index: 50;
   transition: all 0.2s;
+  color: var(--black);
 }
 .header_inner {
   width: 100%;
@@ -45,13 +46,31 @@
 .menu_button:hover .menu_line::after {
   width: 1.5rem;
 }
-.cart_badge {
+
+.cart_button {
   display: flex;
+  gap: 0.3rem;
   align-items: center;
-  justify-content: center;
-  border-radius: 50rem;
-  width: 1.1rem;
-  height: 1.1rem;
-  font-size: 0.65rem;
-  border: 1px solid var(--primary);
+}
+
+/*  */
+/* responsive */
+@media (max-width: 821px) {
+  .header {
+    color: white;
+  }
+  .cart_button {
+    display: none;
+  }
+  .menu_line,
+  .menu_line::after {
+    background: var(--white);
+  }
+  .header.scrolled {
+    color: var(--black);
+  }
+  .header.scrolled .menu_line,
+  .header.scrolled .menu_line::after {
+    background: var(--primary);
+  }
 }
