--- a/src/app/Page.module.css
+++ b/src/app/Page.module.css
@@ -208,6 +208,7 @@
 }
 .lenses_item {
   flex-basis: 50%;
+  width: 50%;
   display: flex;
 }
 .lenses_item:nth-child(1) {
@@ -216,19 +217,25 @@
   padding-right: var(--spacer-large);
 }
 .lenses_item:nth-child(2) {
-  display: flex;
+  /* display: flex; */
+  display: block;
 }
 .lenses_circle {
   position: relative;
-  height: 135%;
+  width: 33%;
   aspect-ratio: 1;
   border-radius: 50%;
   overflow: hidden;
 }
-.lenses_circle {
-  object-fit: cover;
+.lenses_circle:nth-child(1) {
+  float: left;
 }
-
+.lenses_circle:nth-child(3) {
+  float: left;
+}
+.lenses_circle:nth-child(3) {
+  float: right;
+}
 /*  */
 /*  */
 /* media */
@@ -242,18 +249,10 @@
   .opticlear_item {
     height: 550px;
   }
-
-  /* lenses */
-  .lenses_circle {
-    height: 120%;
-  }
 }
 
 @media (max-width: 1025px) {
   /* lenses */
-  .lenses_circle {
-    height: 100%;
-  }
 }
 
 @media (max-width: 821px) {
@@ -299,9 +298,6 @@
     flex-wrap: wrap;
     flex-direction: row-reverse;
   }
-  .lenses_circle {
-    height: 65%;
-  }
 }
 
 @media (max-width: 651px) {
@@ -314,7 +310,7 @@
   .about_wrapper {
     flex-direction: column-reverse;
   }
-  .about_item:nth-child(1) {
+  .about_item {
     margin-bottom: 2rem;
   }
   .about_item:nth-child(1) {
@@ -337,21 +333,12 @@
   .lenses_wrapper {
     flex-direction: column;
   }
-  .lenses_circle {
-    max-height: 100px;
-  }
   .lenses_item {
     margin-bottom: 2rem;
   }
   .lenses_item:nth-child(2) {
     flex-direction: row;
     gap: 2rem;
-    height: 300px;
-  }
-}
-
-@media (max-width: 431px) {
-  .lenses_circle {
-    height: 60%;
+    height: 400px;
   }
 }
