--- a/src/app/app.css
+++ b/src/app/app.css
@@ -96,16 +96,17 @@ body {
 
 /*  */
 /* media */
+
 @media (min-width: 1921px) {
   html {
     font-size: 22px;
   }
 
   .body-wrapper {
-    max-width: 100%;
+    max-width: 2560px;
   }
   .container {
-    max-width: 100%;
+    max-width: 2560px;
     padding: 0 4%;
   }
 }
