--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,12 +5,13 @@
 }
 
 .footer_inner {
+  color: var(--primary);
   height: max-content;
   font-size: 1rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
-  gap: 1rem;
-  color: var(--primary);
+  gap: 2vw;
 }
 
 /*  */
@@ -67,21 +68,27 @@
 @media (max-width: 821px) {
   .footer_inner {
     flex-direction: column;
-  }
-  .logo {
-    flex-basis: 100%;
-    justify-content: center;
+    gap: 5vw;
     text-align: center;
   }
+  .logo {
+    order: 1;
+    justify-content: center;
+  }
   .social {
-    flex-basis: 100%;
+    order: 3;
     justify-content: center;
   }
   .nav {
+    order: 2;
     flex-basis: 100%;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
   }
   .copyright {
+    order: 4;
     flex-basis: 100%;
     text-align: center;
   }
