--- a/src/app/app.css
+++ b/src/app/app.css
@@ -2,12 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: inherit;
+  outline: none;
 }
 :root {
   --black: #121212;
   --primary: #566a82;
   --grey: #c1c1c1;
   --white: #fff;
+  --blue: #2c589e;
+  --brown: #826e56;
+  --green: #568258;
   --spacer-large: 7rem;
 }
 
@@ -35,10 +40,12 @@ body {
 }
 .main-wrapper {
   width: 100%;
-  min-height: 80vh;
+  height: 100%;
+  min-height: 84vh;
   display: flex;
   flex-direction: column;
   gap: 25vh;
+  padding-bottom: 5rem;
 }
 
 .section-title {
