--- a/src/app/brand/brand.css
+++ b/src/app/brand/brand.css
@@ -95,80 +95,7 @@
 }
 .faqs_image {
   height: 800px;
-}
-.q_item {
-  position: relative;
-  width: 100%;
-  padding: 1.5rem 0;
-}
-.q_item:first-child:before,
-.q_item::after {
-  position: absolute;
-  content: "";
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background: var(--grey);
-}
-.q_item::before {
-  top: 0;
-}
-.q_item::after {
-  bottom: 0;
-}
-
-.q_top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.q_title {
-  font-size: 1.25rem;
-  color: var(--primary);
-}
-.q_expand {
-  height: 1rem;
-  aspect-ratio: 1;
-  font-weight: 300;
-  position: relative;
-}
-.plus {
-  width: 1.25rem;
-  height: 2px;
-  border-radius: 10rem;
-  background: transparent;
-  position: relative;
-  transform: all 0.1s;
-}
-.plus::after,
-.plus::before {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 2px;
-  border-radius: 10rem;
-  background: var(--primary);
-  transition: all 0.1s;
-}
-.plus::after {
-  transform: rotate(90deg);
-}
-.plus.active::after {
-  transform: rotate(45deg);
-}
-.plus.active::before {
-  transform: rotate(-45deg);
-}
-
-.q_body {
-  height: 0;
-  margin-top: 0;
-  overflow: hidden;
-  transition: all 0.2s;
-}
-.q_body.active {
-  height: max-content;
-  margin-top: 1rem;
+  background-size: cover;
 }
 
 /*  */
