--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,16 +1,19 @@
 .footer {
+  min-height: 8vh;
+  /* background: blanchedalmond; */
+  display: flex;
+  align-items: center;
   width: 100%;
-  height: max-content;
-  padding: 7.5rem 1rem 2.5rem 1rem;
 }
 
 .footer_inner {
+  width: 100%;
   color: var(--primary);
-  height: max-content;
   font-size: 1rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   gap: 2vw;
 }
 
@@ -68,12 +71,14 @@
 @media (max-width: 821px) {
   .footer_inner {
     flex-direction: column;
-    gap: 5vw;
+    gap: 5vh;
     text-align: center;
+    padding: 5vh;
   }
   .logo {
     order: 1;
     justify-content: center;
+    font-size: 3rem;
   }
   .social {
     order: 3;
@@ -86,6 +91,7 @@
     flex-direction: column;
     align-items: center;
     gap: 2vh;
+    font-size: 1.5rem;
   }
   .copyright {
     order: 4;
