--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,12 @@
 .header {
   width: 100%;
-  padding: 2rem 1rem;
+  display: flex;
+  align-items: center;
+  /* padding: 2rem 1rem; */
+  min-height: 8vh;
   z-index: 50;
   transition: all 0.2s;
-  color: var(--black);
+  color: var(--primary);
 }
 .header_inner {
   width: 100%;
@@ -14,7 +17,6 @@
 }
 .scrolled {
   background: rgba(255, 255, 255, 0.8);
-  padding: 2rem 2rem;
 }
 
 .menu_button {
@@ -23,25 +25,27 @@
   align-items: flex-start;
   cursor: pointer;
 }
+.menu_button.active {
+  opacity: 0;
+}
 .menu_line {
-  border-radius: 10rem;
-  top: 0.29rem;
   position: relative;
-  display: block;
+  border-radius: 10rem;
+  top: 25%;
   width: 1.5rem;
   height: 2px;
   background: var(--primary);
 }
 .menu_line::after {
-  border-radius: 10rem;
   content: "";
-  top: 8px;
-  right: 0;
-  position: absolute;
   width: 1rem;
+  top: 400%;
+  right: 0;
   height: 2px;
+  border-radius: 10rem;
+  position: absolute;
   background: var(--primary);
-  transition: all 0.3s;
+  transition: all 0.2s;
 }
 .menu_button:hover .menu_line::after {
   width: 1.5rem;
@@ -59,6 +63,10 @@
   .header {
     color: white;
   }
+  .header_inner {
+    font-size: 1.25rem;
+  }
+
   .cart_button {
     display: none;
   }
