--- a/src/app/catalog/[id]/productpage.css
+++ b/src/app/catalog/[id]/productpage.css
@@ -20,12 +20,12 @@
 }
 .second_image {
   height: max-content;
-  flex: 0 1 33%;
+  flex: 1 1 30%;
   aspect-ratio: 1;
   background-color: var(--brown);
 }
 .third_image {
-  flex: 0 1 65%;
+  flex: 1 1 60%;
   aspect-ratio: 5/6;
   background-color: var(--green);
 }
@@ -49,9 +49,11 @@
 }
 
 .product_title {
+  text-align: left;
   font-size: 2.85rem;
   width: max-content;
   color: var(--primary);
+  flex: 1 1 50%;
 }
 .product_price {
   font-size: 2rem;
