--- a/src/app/catalog/catalog.css
+++ b/src/app/catalog/catalog.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  cursor: pointer;
 }
 .catalog_item_image {
   width: 100%;
@@ -48,4 +49,20 @@
 }
 .catalog_item_price {
   color: var(--primary);
+}
+
+/*  */
+.catalog_more {
+  background: var(--primary);
+  padding: 0.75rem 3rem;
+  color: var(--white);
+  font-size: 0.9rem;
+  text-transform: lowercase;
+  margin-top: 4vh;
+  transition: all 0.1s;
+  float: right;
+}
+.catalog_more:disabled {
+  background: var(--grey);
+  cursor: default;
 }
